--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ selenium==3.141.0
 setuptools==62.1.0
 spamwatch>=0.3.0
 speedtest-cli>=2.1.3
-stagger
+stagger>=1.0.0
 telegraph>=1.4.1
 tgcrypto
 urbandict>=0.5
